--- a/app/src/main/res/layout/appoint_futur_list.xml
+++ b/app/src/main/res/layout/appoint_futur_list.xml
@@ -36,16 +36,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Heure"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/ListTime"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
-                android:text="time"
-                android:textSize="16sp"></TextView>
+                android:text="Time"
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -59,16 +60,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Label"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/Type"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
-                android:text="type"
-                android:textSize="16sp"></TextView>
+                android:text="Type"
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -82,16 +84,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Nom"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
                 android:text="Name"
-                android:textSize="16sp"></TextView>
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -105,16 +108,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Prénom"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/surname"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
-                android:text="surname"
-                android:textSize="16sp"></TextView>
+                android:text="Surname"
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <TextView
