--- a/app/src/main/res/layout/team_list.xml
+++ b/app/src/main/res/layout/team_list.xml
@@ -26,16 +26,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Mail"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/ListMail"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
-                android:text="email"
-                android:textSize="16sp"></TextView>
+                android:text="Email"
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -48,16 +49,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Nom"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/Listname"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
                 android:text="Name"
-                android:textSize="16sp"></TextView>
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -70,16 +72,17 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
                 android:text="Prénom"
+                android:textStyle="bold"
                 android:textSize="20sp"></TextView>
 
             <TextView
                 android:id="@+id/Listsurname"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="100dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="25dp"
-                android:text="surname"
-                android:textSize="16sp"></TextView>
+                android:text="Surname"
+                android:textSize="20sp"></TextView>
         </RelativeLayout>
 
     </LinearLayout>
