--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -35,6 +35,15 @@
            android:layout_marginTop="20dp"
            android:textColor="@color/pant"
            android:textSize="36sp"/>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/textvide"
+           android:text=""
+           android:layout_gravity="center"
+           android:layout_marginTop="50dp"
+           android:textColor="@color/pant"
+           android:textSize="20sp"/>
 
    </LinearLayout>
 
