--- a/app/src/main/res/layout/activity_make_report.xml
+++ b/app/src/main/res/layout/activity_make_report.xml
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Compte rendu à modifier :"
+            android:text="Compte rendu :"
             android:textStyle="bold"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
