--- a/app/src/main/res/layout/activity_take_appoint.xml
+++ b/app/src/main/res/layout/activity_take_appoint.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
-    tools:context=".controller.takeAppoint"
-    android:screenOrientation="portrait">
+    tools:context=".controller.takeAppoint">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,6 +14,75 @@
 
         <include
             layout="@layout/toolbar"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Prise de rendez-vous"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/pant"
+                android:textSize="36sp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <Spinner
+                android:id="@+id/client"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="38dp"
+                android:layout_marginBottom="8dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <CalendarView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="304dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="104dp"
+                android:layout_height="35dp"
+                android:text="Heure :"
+                android:textSize="25sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <Spinner
+                android:id="@+id/hours"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Valider" />
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -27,62 +94,6 @@
 
         <include
             layout="@layout/nav_drawer"/>
-
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="402dp"
-            android:layout_height="41dp"
-            android:textSize="35dp"
-            android:gravity="center"
-            android:text="Prise de rendez-vous"
-            />
-
-        <Spinner
-            android:id="@+id/client"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:layout_marginBottom="8dp"
-            />
-        <CalendarView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="304dp"
-
-            />
-
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="104dp"
-            android:layout_height="35dp"
-            android:text="Heure: "
-            android:textSize="25dp"
-
-            />
-
-        <Spinner
-            android:id="@+id/hours"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-
-            />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valider"
-            />
-    </LinearLayout>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
