--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -17,12 +17,22 @@
         <include
             layout="@layout/toolbar"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Compte Rendu"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/pant"
+            android:textSize="36sp"/>
+
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
     </LinearLayout>
+
 
     <RelativeLayout
         android:layout_width="300dp"
